// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResultWrapper should not render empty panoUrl 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        subTitle
      </h2>
    </div>
  </header>
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
      >
        <span
          className=" map-search-results__button-icon map-search-results__button-icon--maximize"
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should not render empty sub title 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
    </div>
  </header>
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
      >
        <span
          className=" map-search-results__button-icon map-search-results__button-icon--maximize"
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should not render missing children 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
    </div>
  </header>
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
      >
        <span
          className=" map-search-results__button-icon map-search-results__button-icon--maximize"
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should not render missing sub title 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
    </div>
  </header>
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
      >
        <span
          className=" map-search-results__button-icon map-search-results__button-icon--maximize"
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should render everything 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--pano
      "
  >
    <button
      className="
            map-detail-result__header-pano-button
            map-detail-result__header-pano-button--enabled
          "
      disabled={false}
      onClick={[MockFunction]}
      title="Panoramabeeld tonen"
    >
      <img
        alt="Panoramabeeld"
        className="map-detail-result__header-pano"
        height="292"
        src="panoUrl"
        width="438"
      />
    </button>
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        subTitle
      </h2>
    </div>
  </header>
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
      >
        <span
          className=" map-search-results__button-icon map-search-results__button-icon--maximize"
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;
